fix header spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -100,7 +100,7 @@ mark {
   top: 0px;
 
   /* Take full size */
-  height: 100%;
+  height: 90%;
   width: 100%;
 
   /* Center the content */
